# Perturb-OT

./: LICENSE  NOTICE.md  README.md
.github/workflows/: documentation.yml
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/: searchindex.js
docs/_sources/: index.rst.txt
docs/html/: .buildinfo
ott/: pyproject.toml
ott/src/ott/geometry/: geometry.py  pointcloud.py
perturbot/: conf.py  index.rst  pyproject.toml
perturbot/_build/doctrees/: environment.pickle  index.doctree
perturbot/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
perturbot/cv/: run_cv.py
perturbot/cv/kinase/: examine_output_.ipynb  examine_test_.ipynb
perturbot/cv/kinase/all/: feature_match_.ipynb
perturbot/perturbot/: utils.py
perturbot/perturbot/eval/: .run_loo.py  all.py  cv.py  cv_inner_loop.py  cv_outer_loop.py  feature_matching.py  loo.py  match.py  prediction.py  utils.py
perturbot/perturbot/match/: __init__.py  cot.py  cot_labels.py  fot.py  gw.py  gw_labels.py  ot_labels.py  ott_egwl.py  utils.py
perturbot/perturbot/predict/: __init__.py  linear_regression.py  mlp.py  scvi_vae.py  vae.py
perturbot/perturbot/preprocess/: vae.py
public/: objects.inv
scvi-tools/: pyproject.toml
scvi-tools/scvi/data/: _preprocessing.py  _utils.py
scvi-tools/scvi/model/: __init__.py  _multivi.py
scvi-tools/scvi/module/: _multivae.py
scvi-tools/scvi/nn/: _base_components.py
scvi-tools/scvi/train/: __init__.py  _callbacks.py  _trainingplans.py
(+8 files in other folders)
