[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perturbot"
version = "0.0.1"
authors = [
  { name="Jayoung Ryu", email="jayoung_ryu@g.harvard.edu" },
]
description = "OT for aligning multimodal perturbation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "scanpy>=1.6",
  "POT>=0.9",
  "lightning",
  "ott-jax==0.4.6a",
  "scvi-tools==1.1.0a"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://code.roche.com/ryuj6/perturbot"
Issues = "https://code.roche.com/ryuj6/perturbot/-/issues"

[tool.setuptools]
packages=["perturbot"]
